--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -29,6 +29,8 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "src/setupTests.ts",
+    "*.json",
+    "**/*.json"
   ],
 }
