--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -29,8 +29,6 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts",
-    "*.json",
-    "**/*.json"
-  ],
+    "src/setupTests.ts"
+  ]
 }
