--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -6,6 +6,8 @@
   "withdrawal": {
     "min": 10,
     "max": 10000,
+    "mean": 100,
+    "stddev": 1000,
     "distribution": "Gaussian"
   },
   "atms": [
