--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "^2.4.2",
     "css-loader": "0.28.7",
+    "dateformat": "^3.0.3",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "extract-text-webpack-plugin": "3.0.2",
