Add saving and retrieving configuration

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -4,7 +4,8 @@
   "default": {
     "refillAmount": 10000,
     "refillDelayHours": 5,
-    "load": 2
+    "load": 2,
+    "scheduledRefillInterval": 72
   },
   "withdrawal": {
     "min": 10,
