--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.8.2",
     "react-leaflet": "^2.2.1",
     "resolve": "1.6.0",
+    "shortid": "^2.2.14",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
