--- a/src/main/resources/config_full.json
+++ b/src/main/resources/config_full.json
@@ -1,6 +1,7 @@
 {
   "startDate": 1558470392042,
   "endDate": 1559068059000,
+  "eventsPerHour": 100,
   "randomSeed": 1,
   "default": {
     "refillAmount": 10000,
