Configure threads and add benchmark configs

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,6 +1,6 @@
 {
   "startDate": 1558470392042,
-  "endDate": 1559068059000,
+  "endDate": 1559334392042,
   "eventsPerHour": 100,
   "randomSeed": 1,
   "default": {
@@ -16,259 +16,5 @@
     "stddev": 1000,
     "distribution": "Gaussian"
   },
-  "atms": [
-    {
-      "name": 475387316,
-      "location": [
-        50.0622357,
-        19.9359087
-      ],
-      "refillAmount": 50000,
-      "refillDelayHours": 5,
-      "atmDefaultLoad": 3,
-      "hourly": {
-        "1551611460000": {
-          "load": 5
-        }
-      }
-    },
-    {
-      "name": 490986146,
-      "location": [
-        50.0637685,
-        19.9374454
-      ]
-    },
-    {
-      "name": 935788756,
-      "location": [
-        50.0539647,
-        19.9395304
-      ]
-    },
-    {
-      "name": 935792653,
-      "location": [
-        50.0492958,
-        19.9257947
-      ]
-    },
-    {
-      "name": 935792806,
-      "location": [
-        50.0602291,
-        19.9323401
-      ]
-    },
-    {
-      "name": 935793751,
-      "location": [
-        50.0576386,
-        19.9457129
-      ]
-    },
-    {
-      "name": 935796046,
-      "location": [
-        50.0516242,
-        19.942315
-      ]
-    },
-    {
-      "name": 935796674,
-      "location": [
-        50.059,
-        19.9493
-      ]
-    },
-    {
-      "name": 935797569,
-      "location": [
-        50.057,
-        19.9301
-      ]
-    },
-    {
-      "name": 935797650,
-      "location": [
-        50.0683854,
-        19.9494187
-      ]
-    },
-    {
-      "name": 935798096,
-      "location": [
-        50.0683843,
-        19.9493856
-      ]
-    },
-    {
-      "name": 935799384,
-      "location": [
-        50.061,
-        19.9442
-      ]
-    },
-    {
-      "name": 935799489,
-      "location": [
-        50.0645068,
-        19.9461217
-      ]
-    },
-    {
-      "name": 935799786,
-      "location": [
-        50.057,
-        19.9301
-      ]
-    },
-    {
-      "name": 935801286,
-      "location": [
-        50.0640928,
-        19.9325528
-      ]
-    },
-    {
-      "name": 935801754,
-      "location": [
-        50.0638439,
-        19.9328022
-      ]
-    },
-    {
-      "name": 935801963,
-      "location": [
-        50.0664782,
-        19.9400295
-      ]
-    },
-    {
-      "name": 935802212,
-      "location": [
-        50.0607,
-        19.9397
-      ]
-    },
-    {
-      "name": 935802983,
-      "location": [
-        50.0683854,
-        19.9494017
-      ]
-    },
-    {
-      "name": 935803332,
-      "location": [
-        50.0624511,
-        19.960882
-      ]
-    },
-    {
-      "name": 938166447,
-      "location": [
-        50.0620162,
-        19.9359663
-      ]
-    },
-    {
-      "name": 938166448,
-      "location": [
-        50.0619723,
-        19.9359208
-      ]
-    },
-    {
-      "name": 938166454,
-      "location": [
-        50.0629006,
-        19.9400982
-      ]
-    },
-    {
-      "name": 950394463,
-      "location": [
-        50.0524383,
-        19.9458953
-      ]
-    },
-    {
-      "name": 950394584,
-      "location": [
-        50.0543385,
-        19.947839
-      ]
-    },
-    {
-      "name": 1325892241,
-      "location": [
-        50.0543529,
-        19.9357791
-      ]
-    },
-    {
-      "name": 1371149347,
-      "location": [
-        50.0573839,
-        19.9451791
-      ]
-    },
-    {
-      "name": 1574120501,
-      "location": [
-        50.0557392,
-        19.9279771
-      ]
-    },
-    {
-      "name": 1574123934,
-      "location": [
-        50.0588505,
-        19.9247973
-      ]
-    },
-    {
-      "name": 1780416580,
-      "location": [
-        50.0673473,
-        19.959783
-      ]
-    },
-    {
-      "name": 1785983856,
-      "location": [
-        50.0582874,
-        19.9436673
-      ]
-    },
-    {
-      "name": 1862182074,
-      "location": [
-        50.064055,
-        19.9278323
-      ]
-    },
-    {
-      "name": 1862182262,
-      "location": [
-        50.0633083,
-        19.9279314
-      ]
-    },
-    {
-      "name": 1862182472,
-      "location": [
-        50.0639824,
-        19.9243252
-      ]
-    },
-    {
-      "name": 1862182639,
-      "location": [
-        50.0652636,
-        19.9228164
-      ]
-    }
-  ]
+  "atms": [{"name": 21249606, "location": [50.0622357, 19.9359087]}]
 }
